<resources>
    <string name="app_name">Horoscope</string>

    <string name="title_section1">Home</string>
    <string name="title_section2">Birthdate Search</string>
    <string name="title_section3">Compatibility</string>
    <string name="title_section4">Horoscope Game</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <!--Horoscope info-->
    <string name="caption">Tap your horoscope below for more information!</string>
    <string name="aries">ARIES</string>
    <string name="aries_symbol">Ram</string>
    <string name="aries_planet">Mars</string>
    <string name="aries_element">Fire</string>
    <string name="aries_c">They are impulsive and goal-oriented. They are quite short-tempered.
        They need to understand things quickly and take immediate action. They are self-willed.
        They are loving and make people around them feel comfortable in their company.</string>

    <string name="taurus">TAURUS</string>
    <string name="taurus_symbol">Bull</string>
    <string name="taurus_planet">Venus</string>
    <string name="taurus_element">Earch</string>
    <string name="taurus_c">They are passionate and loyal. They are short-tempered but quick to cool down.
        They are romantic at heart. They prefer to go with their decisions and do not relent to domination so easily.
        They come across as stubborn and less understanding.</string>

    <string name="gemini">GEMINI</string>
    <string name="gemini_symbol">Twins</string>
    <string name="gemini_planet">Mercury</string>
    <string name="gemini_element">Air</string>
    <string name="gemini_c">Rightly denoted by the symbol, geminis have two facets to their personalities.
        They are creative. They always crave for knowledge. They are outgoing and quite talkative.
        They love change. But this can make them deviate from their goals.</string>

    <string name="cancer">CANCER</string>
    <string name="cancer_symbol">Crab</string>
    <string name="cancer_planet">Moon</string>
    <string name="cancer_element">Water</string>
    <string name="cancer_c">People belonging to this sign are calm and peaceful.
        They have a good understanding of human nature. They are patient and empathetic.
        They are sentimental but tend to hide their emotions.</string>

    <string name="leo">LEO</string>
    <string name="leo_symbol">Lion</string>
    <string name="leo_planet">Sun</string>
    <string name="leo_element">Fire</string>
    <string name="leo_c">Leos are gifted with leadership qualities. They may not be easy to work with,
        as they tend to dictate terms. Honest and candid, they fight for justice. Contrary to how they seem to be,
        they are warmhearted.</string>

    <string name="virgo">VIRGO</string>
    <string name="virgo_symbol">Virgin</string>
    <string name="virgo_planet">Mercury</string>
    <string name="virgo_element">Earth</string>
    <string name="virgo_c">They are analytical. They always strive for perfection and are highly critical.
        Virgos are best at planning and organizing. You can\'t expect them to take risks; they are very cautious about every small thing.
        It\'s rare to find a Virgo who\'s an extravert.</string>

    <string name="libra">LIBRA</string>
    <string name="libra_symbol">Weighing Scales</string>
    <string name="libra_planet">Venus</string>
    <string name="libra_element">Air</string>
    <string name="libra_c">They are balanced and thoughtful by nature. They are in constant pursuit of betterment.
        Their family means the world to them. They are not very comfortable expressing their emotions and can come
        across as aloof or indifferent.</string>

    <string name="scorpio">SCORPIO</string>
    <string name="scorpio_symbol">Scorpion</string>
    <string name="scorpio_planet">Pluto</string>
    <string name="scorpio_element">Water</string>
    <string name="scorpio_c">Scorpios are magnetic. They are intelligent and astute. They are optimistic about life.
        They have intense and dramatic relationships. Known to belong to the most powerful sign, Scorpios are born to win!</string>

    <string name="sagittarius">SAGITTARIUS</string>
    <string name="sagittarius_symbol">Archer</string>
    <string name="sagittarius_planet">Jupiter</string>
    <string name="sagittarius_element">Fire</string>
    <string name="sagittarius_c">They like to accept challenges and take risks. They are cheerful. They pursue perfection.
        They are quite philosophical. They believe in learning from experience. They are slightly moody and may come across
        as less responsible individuals.</string>

    <string name="capricorn">CAPRICORN</string>
    <string name="capricorn_symbol">Goat</string>
    <string name="capricorn_planet">Saturn</string>
    <string name="capricorn_element">Earth</string>
    <string name="capricorn_c">Endurance and stamina are characteristic to this sign. Capricorns are active.
        They think too much sometimes and stress themselves. They may come across as selfish. They may exhibit dark emotions.</string>

    <string name="aquarius">AQUARIUS</string>
    <string name="aquarius_symbol">Water Bearer</string>
    <string name="aquarius_planet">Uranus</string>
    <string name="aquarius_element">Air</string>
    <string name="aquarius_c">They are trustworthy. They believe in the power of truth.
        They are intellectuals who are immersed in gaining knowledge.
        They are philosophical by nature and somewhat detached.</string>

    <string name="pisces">PISCES</string>
    <string name="pisces_symbol">Fish</string>
    <string name="pisces_planet">Neptune</string>
    <string name="pisces_element">Water</string>
    <string name="pisces_c">They are compassionate and caring in nature. Their friends mean a lot to them.
        They can go out of their way for the sake of friendship. They believe in living in the present and
        dealing with situations as and when they come.</string>

    <string name="symbol">Symbol:</string>
    <string name="planet">Ruling Planet:</string>
    <string name="element">Element:</string>
    <string name="characteristic">Characteristics:</string>
    <string name="month">Month</string>
    <string name="enter">Enter Birthday</string>
    <string name="game">Horoscope Game</string>
    <string name="compatibility">Choose two horoscope signs to see if they are compatible!</string>
    <string name="submit">Done</string>
    <string name="next">Next</string>
    <string name="game_info">Guess which horoscope sign the following birthday falls under</string>

    <!--Spinner-->
    <string-array name="signs">
        <item>Aries</item>
        <item>Taurus</item>
        <item>Gemini</item>
        <item>Cancer</item>
        <item>Leo</item>
        <item>Virgo</item>
        <item>Libra</item>
        <item>Scorpio</item>
        <item>Sagittarius</item>
        <item>Capricorn</item>
        <item>Aquarius</item>
        <item>Pisces</item>
    </string-array>

</resources>
