<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_blue_grey_800"
    tools:context=".MainActivity$PlaceholderFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:id="@+id/caption"
            android:text="@string/caption"
            android:textSize="16sp"
            android:gravity="center_horizontal"
            android:textColor="@color/background_material_light"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/title"
            android:drawablePadding="-10dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/aries"
            android:src="@drawable/aries_icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/aries"
            android:clickable="true"
            android:onClick="aries"
            android:layout_weight="1"/>
        <ImageView
            android:id="@+id/taurus"
            android:src="@drawable/taurus_icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/taurus"
            android:clickable="true"
            android:onClick="taurus"
            android:layout_weight="1"/>
        <ImageView
            android:id="@+id/gemini"
            android:src="@drawable/gemini_icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/gemini"
            android:clickable="true"
            android:onClick="gemini"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/cancer"
            android:src="@drawable/cancer_icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/cancer"
            android:clickable="true"
            android:onClick="cancer"
            android:layout_weight="1"/>
        <ImageView
            android:id="@+id/leo"
            android:src="@drawable/leo_icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/leo"
            android:clickable="true"
            android:onClick="leo"
            android:layout_weight="1"/>
        <ImageView
            android:id="@+id/virgo"
            android:src="@drawable/virgo_icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/virgo"
            android:clickable="true"
            android:onClick="virgo"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/libra"
            android:src="@drawable/libra_icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/libra"
            android:clickable="true"
            android:onClick="libra"
            android:layout_weight="1"/>
        <ImageView
            android:id="@+id/scorpio"
            android:src="@drawable/scorpio_icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/scorpio"
            android:clickable="true"
            android:onClick="scorpio"
            android:layout_weight="1"/>
        <ImageView
            android:id="@+id/sagittarius"
            android:src="@drawable/sagittarius_icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/sagittarius"
            android:clickable="true"
            android:onClick="sagittarius"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/capricorn"
            android:src="@drawable/capricorn_icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/capricorn"
            android:clickable="true"
            android:onClick="capricorn"
            android:layout_weight="1"/>
        <ImageView
            android:id="@+id/aquarius"
            android:src="@drawable/aquarius_icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/aquarius"
            android:clickable="true"
            android:onClick="aquarius"
            android:layout_weight="1"/>
        <ImageView
            android:id="@+id/pisces"
            android:src="@drawable/pisces_icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/pisces"
            android:clickable="true"
            android:onClick="pisces"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>